--- a/src/components/lists/NamesSwiperList/namesSwiper.sass
+++ b/src/components/lists/NamesSwiperList/namesSwiper.sass
@@ -2,7 +2,7 @@
 
 .namesSwiper
   width: 100%
-  padding: 1rem 0 7rem 0!important
+  padding: 2rem 0 7rem 0!important
 
 @media (max-width: $md)
   .namesSwiper
